<resources>
    <string name="app_name">servo</string>

    <string-array name="Profession">
        <item>Electrician</item>
        <item>Carpenter</item>
        <item>Plumber</item>
        <item>Cleaner</item>
        <item>Others</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_new_complaint">NewComplaint</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="addComplaint">Add a Complaint</string>
    <string name="title_activity_pending">PendingActivity</string>
    <string name="tagLine">Never Stop Complaining!</string>
    <string name="appName">Servo</string>
    <string name="SignUp">Sign up</string>
    <string name="SignIn">Sign in</string>
    <string name="welcome">Hello, Welcome!</string>
    <string name="username">Enter Username</string>
    <string name="password">Password</string>
    <string name="notAUser">Not a user?  Register</string>
    <string name="alreadyAUser">Already a user?  Login</string>
    <string name="mail">Email</string>
    <string name="phone">Mobile No.</string>
    <string name="register">Register</string>
    <string name="student">Student</string>
    <string name="pending">Pending</string>
    <string name="completed">Completed</string>
    <string name="servo">SERVO</string>
    <string name="moreDetails">See more Details >></string>
    <string name="doc">Date of complaint : </string>
    <string name="details">Details : </string>
    <string name="time">Time : </string>
    <string name="employee">Employee</string>
    <string name="rollNo">Enter roll no</string>
    <string name="roomNo">Enter room no</string>
    <string name="addComplain">Add Complaint</string>
    <string name="addDes">Add Description</string>
    <string name="complaintStart">Complaint started on :</string>
    <string name="complaintEnd">Complaint ended on :</string>
    <string name="addNewComplain">Add a new complaint </string>
    <string name="menu">menu</string>
    <string name="logo">logo</string>

</resources>