<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <EditText
        android:id="@+id/username"
        android:layout_width="275dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/custom_edit_text_view"
        android:drawablePadding="16dp"
        android:ems="10"
        android:fontFamily="@font/abhaya_libre"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:paddingEnd="12dp"
        android:textColor="@color/colorPrimary"
        android:textColorHint="#616161"
        app:drawableStartCompat="@drawable/custom_mail_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email"
        android:layout_width="275dp"
        android:layout_height="40dp"
        android:layout_marginTop="28dp"
        android:drawablePadding="16dp"
        android:ems="10"
        android:paddingEnd="12dp"
        android:paddingStart="10dp"
        android:hint="@string/mail"
        app:passwordToggleEnabled="true"
        android:fontFamily="@font/abhaya_libre"
        android:textColor="@color/colorPrimary"
        android:textColorHint="#616161"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:drawableStartCompat="@drawable/custom_email_icon"
        android:background="@drawable/custom_edit_text_view"
        app:layout_constraintTop_toBottomOf="@+id/username"
        android:importantForAutofill="no"
        android:inputType="textWebEmailAddress" />

    <EditText
        android:id="@+id/password"
        android:layout_width="275dp"
        android:layout_height="40dp"
        android:layout_marginTop="28dp"
        android:drawablePadding="16dp"
        android:ems="10"
        android:paddingEnd="12dp"
        android:paddingStart="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:passwordToggleEnabled="true"
        android:fontFamily="@font/abhaya_libre"
        android:textColor="@color/colorPrimary"
        android:textColorHint="#616161"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:drawableStartCompat="@drawable/custom_vpn_icon"
        android:background="@drawable/custom_edit_text_view"
        app:layout_constraintTop_toBottomOf="@+id/email"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/phoneno"
        android:layout_width="275dp"
        android:layout_height="40dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/custom_edit_text_view"
        android:drawablePadding="16dp"
        android:ems="10"
        android:fontFamily="@font/abhaya_libre"
        android:hint="@string/phone"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:paddingStart="10dp"
        android:paddingEnd="12dp"
        android:textColor="@color/textColorPrimary"
        android:textColorHint="#616161"
        app:drawableStartCompat="@drawable/custom_phone_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:passwordToggleEnabled="true" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="250dp"
        android:layout_height="53dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/custom_border"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneno">

        <Button
            android:id="@+id/buttonStudent"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="125dp"
            android:layout_height="50dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="1"
            android:background="@drawable/round_button"
            android:fontFamily="@font/abhaya_libre"
            android:gravity="center|center_horizontal|center_vertical"
            android:hapticFeedbackEnabled="false"
            android:text="@string/student"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textColorHint="#616161"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/buttonEmployee"
            android:layout_width="125dp"
            android:layout_height="50dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="1"
            android:background="@drawable/round_button"
            android:backgroundTint="#FFFFFF"
            android:fontFamily="@font/abhaya_libre"
            android:text="@string/employee"
            android:textAllCaps="false"
            android:textColor="@color/textColorPrimary"
            android:textColorHint="#616161"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <Spinner
        android:id="@+id/profession"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="62dp"
        android:background="@drawable/custom_edit_text_view"
        android:ems="10"
        android:fontFamily="@font/abhaya_libre"
        android:gravity="center_vertical"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="20dp"
        android:paddingEnd="12dp"
        android:spinnerMode="dialog"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="200dp"
        android:layout_height="108dp"
        android:layout_marginTop="28dp"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <EditText
            android:id="@+id/rollNo"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:background="@drawable/custom_edit_text_view"
            android:ems="10"
            android:fontFamily="@font/abhaya_libre"
            android:gravity="center_vertical"
            android:hint="@string/rollNo"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="#616161"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/roomNo"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/custom_edit_text_view"
            android:ems="10"
            android:fontFamily="@font/abhaya_libre"
            android:gravity="center_vertical"
            android:hint="@string/roomNo"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="#616161"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>

    <Button
        android:id="@+id/newRegister"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@drawable/round_button"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <TextView
        android:id="@+id/alreadyAUser"
        android:layout_width="173dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/abhaya_libre"
        android:gravity="center"
        android:text="@string/alreadyAUser"
        android:textAlignment="center"
        android:textColor="@color/textColorPrimary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newRegister" />

</androidx.constraintlayout.widget.ConstraintLayout>