<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ComplaintActivity">

    <EditText
        android:id="@+id/roomEdit"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="@drawable/custom_edit_text_view"
        android:ems="10"
        android:fontFamily="@font/abhaya_libre"
        android:gravity="center_vertical"
        android:hint="@string/roomNo"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:textColor="@color/colorPrimary"
        android:textColorHint="#616161"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.118" />

    <EditText
        android:id="@+id/rollEdit"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="@drawable/custom_edit_text_view"
        android:ems="10"
        android:fontFamily="@font/abhaya_libre"
        android:gravity="center_vertical"
        android:hint="@string/rollNo"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:textColor="@color/colorPrimary"
        android:textColorHint="#616161"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roomEdit"
        app:layout_constraintVertical_bias="0.066" />

    <Spinner
        android:id="@+id/reqPerson"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="@drawable/custom_edit_text_view"
        android:ems="10"
        android:fontFamily="@font/abhaya_libre"
        android:gravity="center_vertical"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="20dp"
        android:paddingEnd="12dp"
        android:spinnerMode="dialog"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rollEdit"
        app:layout_constraintVertical_bias="0.079" />

    <EditText
        android:id="@+id/complaintDesc"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:background="@drawable/custom_edit_text_view"
        android:gravity="top|start"
        android:hint="@string/addDes"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:lines="5"
        android:paddingStart="25dp"
        android:paddingTop="20dp"
        android:paddingEnd="25dp"
        android:singleLine="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reqPerson"
        app:layout_constraintVertical_bias="0.189" />

    <Button
        android:id="@+id/newComplaintBtn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button"
        android:text="@string/addComplain"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/complaintDesc"
        app:layout_constraintVertical_bias="0.341" />

</androidx.constraintlayout.widget.ConstraintLayout>